--- a/assets/scss/_page-changer.scss
+++ b/assets/scss/_page-changer.scss
@@ -2,8 +2,7 @@
   &--1016 {
     .container,
     .container-main,
-    .c-block-cloud,
-    .c-block-05__row,
+    .c-block-05,
     .c-head__wrap {
       @extend .container-main--1016;
     }
@@ -12,8 +11,7 @@
   &--1020 {
     .container,
     .container-main,
-    .c-block-cloud,
-    .c-block-05__row,
+    .c-block-05,
     .c-head__wrap {
       @extend .container-main--1020;
     }
